# deng-ingestion-pipeline

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.kestra  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/: kestra-entrypoint.sh
docs/: 01_architecture_and_use_case.md  02_data_dictionary.md  03_orchestration.md  04_local_development.md  05_known_issues_and_design_decisions.md  06_midterm_verification.md  gdelt.drawio
grafana/dashboards/: country_risk_drilldown.json  geopolitical-risk-overview.json  latest-alert-window-geomap.json  silver-event-density-heatmap.json
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: postgres.yaml
kestra/flows/: main_hslu.geopolitical_risk.main.pipeline_run_scheduled.yaml  main_hslu.geopolitical_risk.main_pipeline_run_manual.yml  main_hslu.geopolitical_risk.main_pipeline_run_scheduled.yml  main_hslu.geopolitical_risk.subflows.export_ingest_all.yml  main_hslu.geopolitical_risk.subflows.gold_build.yml  main_hslu.geopolitical_risk.subflows.load_lookups.yaml  main_hslu.geopolitical_risk.subflows.manifest_sync.yml  main_hslu.geopolitical_risk.subflows.silver_transform_all.yaml
notebooks/: raw_unfiltered.ipynb
notebooks/raw_checks/: events_bronze.ipynb  events_silber.ipynb  lookups.ipynb  old_raw_exports.ipynb
sql/: 01_types.sql  02_tables.sql  init_postgres.sql
sql/gold/: build_risk_alerts_gold.sql
sql/lookup/: seed_risk_category_mapping.sql
sql/silver/: select_pending_silver_batch.sql  transform_batch_to_silver.sql
src/: main.py
src/deng_ingestion/: __init__.py  logging_config.py  paths.py
src/deng_ingestion/bronze/: __ini__.py  export_columns.py
src/deng_ingestion/cli/: handlers.py  main.py  parser.py
src/deng_ingestion/core/: http.py  paths.py
src/deng_ingestion/db/: connection.py  pipeline_batches.py  sql_loader.py
src/deng_ingestion/jobs/: __init__.py  build_risk_alerts_gold.py  ingest_export_events.py  ingest_manifest.py  load_lookups.py  run_incremental_pipeline.py  transform_events.py
src/deng_ingestion/lookups/: config.py  loader.py
src/deng_ingestion/manifest/: entry.py  parser.py
src/deng_ingestion/pipeline/: context.py  context_access.py  context_keys.py  context_types.py  job.py  types.py
src/deng_ingestion/steps/: build_risk_alerts_gold.py  download_export_archive.py  download_lookup_files.py  extract_export_csv.py  fetch_manifest.py  filter_manifest_entries.py  ingest_all_pending_export_batches.py  ingest_registered_export_batches.py  load_export_events_to_bronze.py  load_lookup_dimensions.py  parse_manifest_entries.py  register_manifest_batches.py  register_manifest_batches_for_current_run.py  seed_risk_category_mapping.py  select_pending_export_batch.py  select_pending_silver_batch.py  select_registered_silver_batch.py  transform_all_pending_batches_to_silver.py  transform_batch_to_silver.py  transform_registered_batches_to_silver.py
src/gdelt_ingestion/: __init__.py  cli.py  cli_args.py  constants.py  funnel.py  ingest_data.py  logging_config.py  paths.py  time_window.py
src/gdelt_ingestion/bronze/: export_columns.py
src/gdelt_ingestion/cli/: args.py  handlers.py  main.py  parser.py
src/gdelt_ingestion/common/: files.py  http.py
src/gdelt_ingestion/db/: connection.py
src/gdelt_ingestion/gdelt/: __init__.py  download.py  extract.py  fetch_files.py  lastupdate.py  lookup.py  masterlist.py
src/gdelt_ingestion/jobs/: build_risk_alerts_gold.py  fetch_exports_from_masterlist.py  fetch_latest.py  fetch_lookups.py  ingest_export_events.py  (+4 more)
tests/: test_client.py  test_logging_config.py
tests/cli/: test_handlers_manifest.py  test_parser.py
tests/gdelt/: test_download.py  test_lastupdate.py
tests/lookups/: test_loader_helpers.py
tests/manifest/: test_parse_manifest_line.py
tests/pipeline/: test_context_access.py
(+77 files in other folders)
