[project]
name = "gdelt-ingestion"
version = "0.1.0"
description = "GDELT ingestion pipeline (Postgres + GCS + BigQuery)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "click>=8.1.7",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.47",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "pgcli>=4.4.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[project.scripts]
gdelt-ingest = "gdelt_ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdelt_ingestion"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # exclude these directories
  \.venv
  | \.git
)/
'''

[tool.pytest.ini_options]
pythonpath = ["src"]
